# celery_demo

./: Dockerfile  compose.yaml  pyproject.toml
src/celery_demo/: celeryconfig.py  main.py  producer.py  tasks.py
